--- a/templates/index.html
+++ b/templates/index.html
@@ -32,5 +32,9 @@
         </form>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </body>
+
+
+
 </html>
